tests/NormalTests/paczka1/fuzzy1/82343020.err
Error in line 12: qHgshfo A204 58,9
Error in line 29: qHgshfo S962 27,8
Error in line 30: qHgshfo A31 40,0
Error in line 31: jJdj A204 83,8
Error in line 34: TfCgr A264 68,6
